# normal-rust

./: .gitignore  Cargo.toml  README.md  build.txt  index.html  package.json  vite.config.js
pkg/: normal_rust.d.ts  normal_rust.js  normal_rust_bg.wasm  normal_rust_bg.wasm.d.ts  package.json
src/: DefaultMKHumanGeo.js  TestApp.jsx  index.jsx
src/crates/compute-normals/: Cargo.toml  README.md
src/crates/compute-normals/src/: lib.rs
tests/: DefaultMKHumanGeo.js  index.html
